[package]
name = "init-rs"
version = "0.1.0"
edition = "2021"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pid1 = { path = "../pid1"}
clap_lex = "0.5.1"
nix = {version = "0.27.1", features = ["process"]}

[[bin]]
name = "pid1"
path = "src/main.rs"
