[package]
name = "pid1-exe"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/fpco/pid1-rs"
repository = "https://github.com/fpco/pid1-rs"
license = "MIT"
description = "pid1 handling library for proper signal and zombie reaping of the PID1 process"
keywords = ["init", "pid1", "process", "cli"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pid1 = { path = "../pid1", version = "0.1.0" }
signal-hook = "0.3.17"
clap = { version = "4.4.6", default-features = false, features = ["std", "derive", "help"]}

[[bin]]
name = "pid1"
path = "src/main.rs"
