[package]
name = "pid1-exe"
version = "0.1.5"
edition = "2021"
description = "pid1 handling library for proper signal and zombie reaping of the PID1 process"
readme = "../README.md"
homepage = "https://github.com/fpco/pid1-rs"
repository = "https://github.com/fpco/pid1-rs"
license = "MIT"
keywords = ["cli", "init", "pid1", "process"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pid1"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", default-features = false, features = [
  "derive",
  "help",
  "std",
] }
pid1 = { version = "0.1.5", path = "../pid1" }
signal-hook = "0.3.18"
