[package]
name = "pid1"
version = "0.1.1"
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/fpco/pid1-rs"
repository = "https://github.com/fpco/pid1-rs"
license = "MIT"
description = "pid1 handling library for proper signal and zombie reaping of the PID1 process"
keywords = ["init", "pid1", "process", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["process", "signal"] }
signal-hook = "0.3.17"
thiserror = "1"
